--- a/ComePenny/app/src/main/res/layout/activity_write_booth_select.xml
+++ b/ComePenny/app/src/main/res/layout/activity_write_booth_select.xml
@@ -28,14 +28,24 @@
             android:focusable="false"
             android:longClickable="false"
             android:src="@drawable/logo" />
+
+        <ImageView
+            android:id="@+id/btn_booth_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center"
+            android:layout_marginRight="6dp"
+            android:src="@drawable/write_write"/>
     </android.support.v7.widget.Toolbar>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
     <GridView
+        android:choiceMode="singleChoice"
         android:paddingTop="4dp"
         android:scrollbars="none"
-        android:listSelector="@android:color/transparent"
+        android:listSelector="@android:color/darker_gray"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/gv_select_booth"
