--- a/ComePenny/app/src/main/res/layout/write_row_booth.xml
+++ b/ComePenny/app/src/main/res/layout/write_row_booth.xml
@@ -2,8 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="174dp"
     android:layout_height="174dp"
-    android:paddingTop="4dp"
-    android:paddingLeft="4dp"
+    android:paddingTop="2dp"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
+    android:paddingBottom="2dp"
     android:id="@+id/test_layout">
 
     <ImageView
