--- a/ComePenny/app/src/main/res/layout/row_comment.xml
+++ b/ComePenny/app/src/main/res/layout/row_comment.xml
@@ -18,6 +18,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_comment_basic"
             android:src="@drawable/test_person"
             android:layout_width="46dp"
             android:layout_height="46dp"
@@ -30,29 +31,32 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_comment_userid"
                 android:textSize="12dp"
                 android:textColor="#686868"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="jihun1226" />
+                android:text="" />
 
             <TextView
+                android:id="@+id/tv_comment"
                 android:layout_marginTop="8dp"
                 android:lineSpacingExtra="7dp"
                 android:paddingRight="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="대단합니다아아아아아아아아아아아아아아아아아아아아아아아아아아아아아아"
+                android:text=""
                 android:textSize="11dp"
                 android:textColor="#686868" />
 
             <TextView
+                android:id="@+id/tv_comment_time"
                 android:layout_marginTop="6dp"
                 android:textSize="10dp"
                 android:textColor="#959595"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="5시간전" />
+                android:text="" />
 
         </LinearLayout>
     </LinearLayout>
