메인페이지 1단 관리자가 큐레이션 할 수 있게 수정

--- a/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
@@ -112,6 +112,18 @@
                                 android:textColor="#959595"
                                 android:textSize="11dp" />
 
+                            <TextView
+                                android:id="@+id/tv_time"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="16dp"
+                                android:text=""
+                                android:textColor="#959595"
+                                android:textSize="11dp" />
+
+
+
+
 
                         </LinearLayout>
 
