내가쓴글에만 수정/삭제버튼 보이게하기  myinfo페이지 tab으로 mylike/mywrite로 나눔 - 레이아웃수정필요, mywrite서버연동x 댓글 작성시 리스트뷰 바로업데이트 안됨

--- a/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
@@ -200,6 +200,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/btn_del"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -208,7 +209,8 @@
                     android:layout_marginRight="10dp"
                     android:text="수정/삭제"
                     android:textColor="#959595"
-                    android:textSize="11dp" />
+                    android:textSize="11dp"
+                    android:visibility="invisible"/>
             </RelativeLayout>
             <ImageView
                 android:layout_width="wrap_content"
@@ -243,7 +245,6 @@
                     android:layout_width="0dp"
                     android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
-
                     android:text="작성"
                     android:textColor="#535353"
                     android:textSize="16dp"
