--- a/ComePenny/app/src/main/res/layout/row_comment.xml
+++ b/ComePenny/app/src/main/res/layout/row_comment.xml
@@ -23,6 +23,10 @@
             android:layout_width="46dp"
             android:layout_height="46dp"
             android:paddingLeft="5dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <LinearLayout
             android:paddingLeft="14dp"
@@ -43,22 +47,27 @@
                 android:layout_marginTop="8dp"
                 android:lineSpacingExtra="7dp"
                 android:paddingRight="5dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textSize="11dp"
                 android:textColor="#686868" />
 
+
+
+        </LinearLayout>
             <TextView
                 android:id="@+id/tv_comment_time"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="15dp"
+                android:paddingRight="5dp"
                 android:textSize="10dp"
+                android:gravity="center"
+                android:layout_alignParentRight="true"
                 android:textColor="#959595"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="" />
-
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
 
