--- a/ComePenny/app/src/main/res/layout/activity_login.xml
+++ b/ComePenny/app/src/main/res/layout/activity_login.xml
@@ -1,105 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sv_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<LinearLayout
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/login_background">
 
-    <RelativeLayout
-        android:layout_marginTop="230dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/log_relative">
+    <LinearLayout
+        android:id="@+id/log_relative"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#29c5e4"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:orientation="vertical">
+
         <ImageView
-            android:layout_width="280dp"
-            android:layout_height="96dp"
-            android:src="@drawable/login_bar"
-            android:id="@+id/imageView" />
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingBottom="34dp"
+            android:paddingTop="50dp"
+            android:src="@drawable/login_logo" />
 
         <LinearLayout
-            android:layout_width="230dp"
-            android:layout_height="96dp"
-            android:layout_marginLeft="48dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="281dp"
+                android:layout_height="41dp"
+                android:layout_gravity="center_horizontal"
+                android:background="#ffffff"
+                android:orientation="horizontal">
 
-        <EditText
-            android:layout_marginTop="1dp"
-            android:background="@drawable/login_bar_text"
-            android:layout_width="230dp"
-            android:layout_height="45dp"
-            android:textSize="16sp"
-            android:inputType="textEmailAddress"
-            android:id="@+id/e_log_email"
-            android:hint="E-mail address"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/login_mail" />
 
 
-            <EditText
-                android:layout_marginTop="4dp"
-                android:background="@drawable/login_bar_text"
-                android:layout_width="230dp"
-                android:layout_height="45dp"
-                android:textSize="16sp"
-                android:id="@+id/e_log_passwd"
-                android:inputType="textPassword"
-                android:hint="password"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                <EditText
+                    android:id="@+id/e_log_email"
+                    android:layout_width="230dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:background="@null"
+                    android:hint="E-mail address"
+                    android:inputType="textEmailAddress"
+                    android:textColorHint="#b6b6b6"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="281dp"
+                android:layout_height="41dp"
+                android:layout_gravity="center_horizontal"
+                android:background="#ffffff"
+                android:orientation="horizontal"
+                android:layout_marginTop="7dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/login_pass" />
+
+
+                <EditText
+                    android:id="@+id/e_log_passwd"
+                    android:layout_width="230dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:background="@null"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:textColorHint="#b6b6b6"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/btn_login"
+            android:layout_width="280dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="7dp"
+            android:background="@drawable/login_button"
+            android:gravity="center_horizontal" />
 
-    </RelativeLayout>
 
-    <ImageView
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:background="@drawable/login_button"
-        android:layout_marginTop="9dp"
-        android:layout_width="280dp"
-        android:layout_height="48dp"
-        android:id="@+id/btn_login" />
-
-    
-    <LinearLayout
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="29dp">
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
-            android:text="비밀번호 찾기"
-            android:textSize="16sp"
-            android:textColor="#ffffff"
-            android:id="@+id/tv_findPW" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:layout_marginBottom="200dp">
 
 
-        <TextView
-            android:layout_marginLeft="68dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="회원가입"
-            android:textSize="16sp"
-            android:textColor="#ffffff"
-            android:id="@+id/tv_SignUp" />
+            <TextView
+                android:id="@+id/tv_SignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="68dp"
+                android:text="회원가입"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_findPW"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="비밀번호 찾기"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
 
 
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 </ScrollView>
