--- a/ComePenny/app/src/main/res/layout/write_row_booth.xml
+++ b/ComePenny/app/src/main/res/layout/write_row_booth.xml
@@ -13,6 +13,7 @@
         android:layout_width="174dp"
         android:layout_height="174dp"
         android:id="@+id/img_main_company"
+        android:src="@drawable/ex1"
        />
 
 
