--- a/ComePenny/app/src/main/res/layout/activity_write_booth_select.xml
+++ b/ComePenny/app/src/main/res/layout/activity_write_booth_select.xml
@@ -45,14 +45,15 @@
         android:choiceMode="singleChoice"
         android:paddingTop="4dp"
         android:scrollbars="none"
-        android:listSelector="#29c5e4"
+        android:listSelector="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/gv_select_booth"
         android:divider="#00000000"
         android:layout_centerHorizontal="true"
         android:numColumns="2"
-        android:paddingRight="4dp"
+        android:paddingRight="2dp"
+        android:paddingLeft="2dp"
         />
     </LinearLayout>
 </LinearLayout>
