--- a/ComePenny/app/src/main/res/layout/row_booth.xml
+++ b/ComePenny/app/src/main/res/layout/row_booth.xml
@@ -10,9 +10,7 @@
         android:scaleType="centerCrop"
         android:layout_width="174dp"
         android:layout_height="174dp"
-        android:id="@+id/img_main_company"
-        android:src="@drawable/ex1"
-      />
+        android:id="@+id/img_main_company" />
 
     <LinearLayout
         android:background="@drawable/main_text_box"
