--- a/ComePenny/app/src/main/res/layout/row_idea_popular.xml
+++ b/ComePenny/app/src/main/res/layout/row_idea_popular.xml
@@ -13,7 +13,7 @@
         android:layout_margin="1dp"
         android:background="#ffffff">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -22,8 +22,26 @@
                 android:layout_width="167dp"
                 android:layout_height="167dp"
                 android:id="@+id/recycle_image"/>
+            <LinearLayout
+                android:layout_width="58dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="54dp"
+                android:layout_marginTop="71dp"
+                android:background="#BF000000"
+                android:gravity="center"
+                >
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_name"
+                    android:text=""
+                    android:textSize="15dp"
+                    android:textColor="#ffffff"/>
+            </LinearLayout>
+
+
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
