--- a/ComePenny/app/src/main/res/layout/write_row_booth.xml
+++ b/ComePenny/app/src/main/res/layout/write_row_booth.xml
@@ -15,6 +15,24 @@
         android:id="@+id/img_main_company"
 
        />
+    <LinearLayout
+        android:layout_width="58dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="54dp"
+        android:layout_marginTop="71dp"
+        android:background="#BF000000"
+        android:gravity="center"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_name"
+            android:text=""
+            android:textSize="15dp"
+            android:textColor="#ffffff"/>
+    </LinearLayout>
+
 
 
 </RelativeLayout>
