--- a/ComePenny/app/src/main/res/layout/idea_dialog.xml
+++ b/ComePenny/app/src/main/res/layout/idea_dialog.xml
@@ -1,70 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="아이디어를 수정/삭제하시겠습니까? "
-        android:layout_gravity="center"
-        android:textSize="18sp"
-        android:paddingTop="20dp"
-        android:textStyle="bold"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-
 
     <TableRow
         android:id="@+id/row_rewrite"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp">
+        android:layout_height="40dp"
+        android:paddingLeft="5dp"
+        android:background="@drawable/setting_setting">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="수정"
-            android:textSize="17sp" />
+            android:layout_marginLeft="5dp"
+            android:text="수정하기"
+            android:textSize="15sp" />
     </TableRow>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/myinfo_divideline" />
 
     <TableRow
         android:id="@+id/row_del"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp">
+        android:layout_height="40dp"
+        android:paddingLeft="5dp"
+        android:background="@drawable/setting_setting">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-
-            android:text="삭제"
-            android:textSize="17sp" />
+            android:layout_marginLeft="5dp"
+            android:text="삭제하기"
+            android:textSize="15sp" />
     </TableRow>
 
-    <TableRow
-        android:id="@+id/row_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/myinfo_divideline" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
 
-            android:text="취소"
-            android:textSize="17sp" />
-    </TableRow>
-</LinearLayout>
 
 </LinearLayout>
