--- a/ComePenny/app/src/main/res/layout/activity_booth_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_booth_detail_header.xml
@@ -58,7 +58,7 @@
 
         </LinearLayout>
 
-        <ImageView
+      <!--  <ImageView
             android:id="@+id/btn_booth_info"
             android:layout_marginTop="4dp"
             android:layout_marginRight="4dp"
@@ -69,6 +69,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             />
+
 
         <LinearLayout
             android:id="@+id/booth_info"
@@ -104,7 +105,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true" />
             </RelativeLayout>
-        </LinearLayout>
+        </LinearLayout> -->
     </RelativeLayout>
 
 </LinearLayout>
