--- a/ComePenny/app/src/main/res/layout/row_idea.xml
+++ b/ComePenny/app/src/main/res/layout/row_idea.xml
@@ -14,143 +14,148 @@
         android:layout_height="match_parent">
 
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/idea_list_back"
-        android:orientation="horizontal">
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="7dp">
+            android:background="@drawable/idea_list_back"
+            android:orientation="horizontal">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:paddingLeft="7dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="18dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Writer : "
-                        android:textColor="#959595"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/tv_UserId"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="jihoon1234"
-                        android:textColor="#535353"
-                        android:textSize="15sp" />
-                </LinearLayout>
-
-
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_idea"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="15dp"
-                android:textStyle="normal"
-                android:layout_weight="1"
-                android:paddingBottom="13dp"
-                android:text="적외선으로 상대의 위치를 추적하는 적외선 탐색 추적 장비와 야간에도 적을 물리친다.  " />
-
-            <ImageView
-                android:layout_marginRight="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="6dp"
-                android:background="@drawable/line2" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginRight="6dp"
-                android:layout_marginBottom="10dp"
-                android:gravity="right">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Homo Erectus"
-                    android:textSize="13dp"
-                    android:textColor="#29c5e4"
-                    android:layout_gravity="left"
-                    android:layout_weight="1"
-                    android:paddingLeft="9dp"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="view : "
-                        android:textColor="#959595"
-                        android:textSize="12sp" />
+                        android:orientation="horizontal"
+                        android:paddingBottom="18dp"
+                        android:paddingTop="10dp">
 
-                    <TextView
-                        android:id="@+id/tv_count_view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="12dp"
-                        android:text="231234"
-                        android:textSize="12sp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Writer : "
+                            android:textColor="#959595"
+                            android:textSize="15sp" />
+
+                        <TextView
+                            android:id="@+id/tv_UserId"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="jihoon1234"
+                            android:textColor="#535353"
+                            android:textSize="15sp" />
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/tv_idea"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:paddingBottom="13dp"
+                    android:text="적외선으로 상대의 위치를 추적하는 적외선 탐색 추적 장비와 야간에도 적을 물리친다.  "
+                    android:textSize="15dp"
+                    android:textStyle="normal" />
+
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingRight="9dp">
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="6dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/line2" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginRight="6dp"
+                    android:gravity="right">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="like : "
-                        android:textColor="#959595"
+                        android:layout_gravity="left"
+                        android:layout_weight="1"
+                        android:paddingLeft="9dp"
+                        android:text="Homo Erectus"
+                        android:textColor="#29c5e4"
+                        android:textSize="13dp" />
 
-                        android:textSize="12sp" />
-
-                    <TextView
-                        android:id="@+id/tv_count_like"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1234"
+                        android:orientation="horizontal">
 
-                        android:textSize="12sp" />
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="view : "
+                            android:textColor="#959595"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/tv_count_view"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="12dp"
+                            android:text="231234"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingRight="9dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="like : "
+                            android:textColor="#959595"
+
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/tv_count_like"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1234"
+
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
-
-        <ImageView
+        <com.enterpaper.comepenny.util.CircularImageView
             android:id="@+id/iv_company"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentRight="true"
-            />
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+
+            android:src="@drawable/ex11" />
+
+
     </RelativeLayout>
 </LinearLayout>
