프로필 이미지 서버연동- 이미지 삭제, 업로드/나의이미지는 sd카드에서불러옴

--- a/ComePenny/app/src/main/res/layout/activity_myinfo.xml
+++ b/ComePenny/app/src/main/res/layout/activity_myinfo.xml
@@ -61,7 +61,7 @@
                 <com.enterpaper.comepenny.util.CircularImageView
                     android:layout_width="136dp"
                     android:layout_height="136dp"
-                    android:src="@drawable/myinfo_userimage"
+                    android:background="@drawable/myinfo_userimage"
                     android:layout_gravity="center"
                     android:layout_marginTop="15dp"
                     android:id="@+id/img_my_info_user"/>
@@ -72,8 +72,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="13dp"
-                    android:layout_marginTop="13dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
                     android:text=""
                     android:textColor="#313131"
                     android:textSize="18sp" />
