--- a/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail_header.xml
@@ -244,7 +244,8 @@
                     android:textColorHint="#b6b6b6"
                     android:background="@null"
                     android:hint="댓글달기..."
-                    android:textSize="13dp"/>
+                    android:textSize="13dp"
+                    android:maxLines="20"/>
 
                 <TextView
                     android:id="@+id/btn_reple"
