--- a/ComePenny/app/src/main/res/layout/dialog_comment.xml
+++ b/ComePenny/app/src/main/res/layout/dialog_comment.xml
@@ -76,7 +76,7 @@
             android:layout_height="25dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="7dp"
-            android:background="#BDBDBD"
+            android:visibility="invisible"
             android:padding="3dp"
             android:paddingBottom="1dp"
             android:paddingTop="1dp"
